--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "base-app",
-  "version": "0.1.3",
+  "name": "weather-app",
+  "version": "0.1.5",
   "private": true,
   "homepage": ".",
   "dependencies": {
@@ -17,7 +17,7 @@
     "classnames": "^2.2.6",
     "connected-react-router": "^6.8.0",
     "dayjs": "^1.10.4",
-    "node-sass": "^4.14.1",
+    "sass": "^1.52.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
@@ -28,7 +28,8 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
-    "typescript": "^4.0.3"
+    "@unlimited/smartapp-sdk": "git+ssh://git@github.com:ExpressApp/smartapp-sdk.git",
+    "typescript": "^4.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,23 +44,16 @@
       "react-app"
     ]
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
+  ],
   "devDependencies": {
     "@storybook/addon-actions": "^6.1.15",
     "@storybook/addon-info": "^5.3.21",
     "@storybook/addon-links": "^6.1.15",
-    "@storybook/react": "^6.1.14",
+    "@storybook/react": "^6.4.19",
     "check-dependencies": "^1.1.0",
     "react-docgen-typescript-loader": "^3.7.2"
   }
